crates/tirith/tests/snapshots/help_snapshots__help_check.snap
---
source: crates/tirith/tests/help_snapshots.rs
expression: stdout.to_string()
---
Check a command for URL security issues before execution

Usage: tirith check [OPTIONS] [CMD]...

Arguments:
  [CMD]...  The command to check

Options:
      --shell <SHELL>    Shell type for tokenization [default: posix]
      --format <FORMAT>  Output format (default: human) [possible values: human, json]
      --non-interactive  Force non-interactive mode
      --interactive      Force interactive mode
      --approval-check   Write approval metadata to a temp file and print its path to stdout. Used by shell hooks for the approval workflow
      --strict-warn      Require acknowledgement for warnings (overrides policy)
      --no-daemon        Skip daemon and run analysis locally
  -h, --help             Print help

Examples:
  tirith check -- 'curl https://example.com | bash'
  tirith check --format json -- 'npm install suspicious-pkg'
