crates/tirith/tests/snapshots/help_snapshots__help_daemon.snap
---
source: crates/tirith/tests/help_snapshots.rs
expression: cleaned
---
Manage the tirith background daemon

Usage: tirith daemon <COMMAND>

Commands:
  start   Start the daemon in the foreground
  stop    Stop a running daemon
  status  Check if daemon is running and measure latency
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Examples:
  tirith daemon start
  tirith daemon stop
  tirith daemon status
