crates/tirith/tests/snapshots/help_snapshots__help_explain.snap
---
source: crates/tirith/tests/help_snapshots.rs
expression: cleaned
---
Show documentation for a detection rule

Usage: tirith explain [OPTIONS]

Options:
      --rule <RULE>          Rule ID to explain (e.g., pipe_to_interpreter)
      --list                 List all rules, optionally filtered by category
      --category <CATEGORY>  Filter --list by category (hostname, path, transport, terminal, command, etc.)
      --format <FORMAT>      Output format (default: human) [possible values: human, json]
  -h, --help                 Print help

Examples:
  tirith explain --rule pipe_to_interpreter
  tirith explain --list --category terminal
