crates/tirith/tests/snapshots/help_snapshots__help_fetch.snap
---
source: crates/tirith/tests/help_snapshots.rs
expression: stdout.to_string()
---
Check a URL for server-side cloaking (different content for bots vs browsers)

Usage: tirith fetch [OPTIONS] <URL>

Arguments:
  <URL>  URL to check for cloaking

Options:
      --format <FORMAT>  Output format (default: human) [possible values: human, json]
  -h, --help             Print help

Examples:
  tirith fetch https://example.com/install.sh
  tirith fetch --format json https://example.com/install.sh
