crates/tirith/tests/snapshots/help_snapshots__help_init.snap
---
source: crates/tirith/tests/help_snapshots.rs
expression: cleaned
---
Initialize tirith shell hooks

Usage: tirith init [OPTIONS]

Options:
      --shell <SHELL>  Target shell (default: auto-detect)
  -h, --help           Print help

Examples:
  eval "$(tirith init --shell zsh)"
  eval "$(tirith init --shell bash)"
