crates/tirith/tests/snapshots/help_snapshots__help_license.snap
---
source: crates/tirith/tests/help_snapshots.rs
expression: cleaned
---
Show or manage license status

Usage: tirith license [OPTIONS] [COMMAND]

Commands:
  deactivate  Deactivate current license
  refresh     Refresh license from server
  help        Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>  Output format (default: human) [possible values: human, json]
  -h, --help             Print help

Examples:
  tirith license
  tirith license --format json
