crates/tirith/tests/snapshots/help_snapshots__help_mcp_server.snap
---
source: crates/tirith/tests/help_snapshots.rs
expression: cleaned
---
Run as MCP server (JSON-RPC over stdio)

Usage: tirith mcp-server

Options:
  -h, --help  Print help

Examples:
  tirith mcp-server

Used by MCP client configurations to run tirith as a local tool server.
